# public-cursor

./: .gitignore  README.md  pyproject.toml  requirements.txt
auto-research/: analyze.py  generate_synthetic_data.py  orchestrator.py  prepare.py  program.md  requirements.txt  results.tsv  run_experiment.py  run_remote.py  submit.sh  train.py
auto-research/data/: labels.json
scripts/: embed_single.py  smoke_cluster_join.py
src/atlas_doc_forgery/: cli.py  embeddings.py  io.py  masking.py
src/atlas_forgery/: __init__.py  cluster.py  clustering.py  doc_embed.py  doc_embedding.py  embedders.py  embedding.py  face_embed.py  face_embedding.py  id_normalization.py  image_io.py  io.py  io_npz.py  mask.py  masking.py  npz_store.py  pair_scoring.py  similarity.py  types.py  vector_store.py  vectors.py
src/atlas_forgery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/atlas_forgery/cli/: __init__.py  (+7 more)
src/document_face_embeddings/: __init__.py  clustering.py  embedding.py  face_embedding.py  io.py  vector_store.py
src/forgery_detection/: __init__.py  cluster.py  clustering.py  embedding.py  embeddings.py  id_normalization.py  id_normalize.py  image_masking.py  image_ops.py  join.py  masking.py  math_utils.py  npz_store.py  types.py  vector_store.py
src/forgery_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/forgery_detection_embeddings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/forgery_document_face_embeddings/: __init__.py  core.py  embedders.py
src/forgery_document_face_embeddings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_arcface_embedder.py  test_clip_embedder.py  test_cluster.py  test_clustering.py  test_clustering_threshold_unionfind.py  test_core.py  test_cosine_cc.py  test_doc_front_background.py  test_doc_front_background_embedder.py  test_embedding.py  test_face_embedding.py  test_face_masking.py  test_id_join.py  test_id_normalization_and_join.py  test_io.py  test_join.py  test_join_and_store.py  test_mask.py  test_masking.py  test_masking_and_cluster.py  test_masking_and_clustering.py  test_npz_store.py  test_vector_store.py  test_vectors_and_clustering.py  test_vectors_io.py
tmp_smoke/: embeddings.npz  meta.json
(+1530 files in other folders)
