[project]
name = "atlas-forgery"
version = "0.1.0"
description = "Portable primitives for document forgery analysis (background embeddings + face embeddings + clustering)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Atlas" }]
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "onnxruntime>=1.16",
  "opencv-python-headless>=4.8",
  "scikit-learn>=1.3",
  "pandas>=2.0",
]

[project.optional-dependencies]
face = [
  "insightface>=0.7",
]

[project.scripts]
atlas-cluster-join = "atlas_forgery.cli.cluster_join:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

