[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-face-embeddings"
version = "0.1.0"
description = "Document background embeddings with optional face exclusion + clustering utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cursor Cloud Agent" }]
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16"]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[project.scripts]
docface-embed = "document_face_embeddings.cli.embed:main"
docface-cluster = "document_face_embeddings.cli.cluster:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
